--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.4.0",
     "@tanstack/react-table": "^8.11.8",
     "@tremor/react": "^3.13.4",
     "@types/react-beautiful-dnd": "^13.1.8",
@@ -61,6 +63,7 @@
     "react-hook-form": "^7.49.3",
     "react-resizable-panels": "^2.0.2",
     "sonner": "^1.4.0",
+    "stripe": "^14.15.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.3.3",
